--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -149,6 +149,7 @@
   "Button_Yes": "Yes",
   "Button_No": "No",
   "Button_Close": "Close",
+  "Button_CopyToClipboard": "Copy to Clipboard",
   "Button_Apply": "Apply",
   "Button_Refresh": "Refresh",
   "Button_Help": "Help",
@@ -1518,5 +1519,8 @@
   "Accessibility_ApplyingSetting": "Applying setting",
   "Accessibility_Selected": "Selected",
   "Accessibility_Checked": "Checked",
-  "Accessibility_Unchecked": "Unchecked"
+  "Accessibility_Unchecked": "Unchecked",
+  "Progress_ClickToSeeDetails": "Click to see details",
+  "InfoBar_OtsElevation_Title": "Running as a different user",
+  "InfoBar_OtsElevation_Message": "This app was elevated with a different account's credentials. Settings will still be applied to the logged-in user ({0}). This message is informational only."
 }
