--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -114,6 +114,7 @@
   "Button_Yes": "Sim",
   "Button_No": "Não",
   "Button_Close": "Fechar",
+  "Button_CopyToClipboard": "Copiar para a área de transferência",
   "Button_Apply": "Aplicar",
   "Button_Refresh": "Atualizar",
   "Button_Help": "Ajuda",
@@ -1518,5 +1519,8 @@
   "Accessibility_ApplyingSetting": "Applying setting",
   "Accessibility_Selected": "Selecionado",
   "Accessibility_Checked": "Marcado",
-  "Accessibility_Unchecked": "Desmarcado"
+  "Accessibility_Unchecked": "Desmarcado",
+  "Progress_ClickToSeeDetails": "Clique para ver os detalhes",
+  "InfoBar_OtsElevation_Title": "A executar como utilizador diferente",
+  "InfoBar_OtsElevation_Message": "Esta aplicação foi elevada com as credenciais de outra conta. As definições continuarão a ser aplicadas ao utilizador com sessão iniciada ({0}). Esta mensagem é apenas informativa."
 }
